# chewing-music-study

./: .env.example  .gitignore  README.md  render.yaml  session-1-labeled.json  session-2-labeled.json
backend/: pyproject.toml
backend/app/: db.py  db_singleton.py  main.py  playlist.py  routes.py  schemas.py
backend/music/classical/: manifest.json
backend/music/hiphop/: manifest.json
backend/music/tempo_study/fast/: manifest.json
backend/music/tempo_study/slow/: manifest.json
backend/tests/: test_db.py  test_health.py  test_playlist.py  test_schemas.py  test_sessions.py
docs/superpowers/plans/: 2026-05-24-chewing-music-study.md
docs/superpowers/specs/: 2026-05-24-chewing-music-study-design.md
frontend/: debug.html  genre.html  index.html  intervention.html  label.html  package-lock.json  package.json  record.html  styles.css  tempo.html
frontend/js/: adaptive_audio.js  api.js  audio_player.js  debug_main.js  detector.js  detector_model.js  face_source.js  intervention_main.js  label_main.js  main.js  record_main.js  router.js  state.js  tempo_main.js
frontend/js/views/: consent.js  intervention_recording.js  recording.js  results.js  setup.js  tempo_consent.js  tempo_recording.js  tempo_setup.js
frontend/tests/: audio_player.test.js  detector.test.js  router.test.js  smoke.test.js
scripts/: auto_label.py  export_csv.py  generate_music.py  pull_data.sh  requirements.txt  train_detector.py
